feat(dirs): switch FdbDirectories to DirectoryLayer subspaces; add async segmentKeys(ctx, segId) and segmentsIndexDir